RESOLVED FIXED 249426
REGRESSION(205039@main): StyledMarkupAccumulator sometimes does not emit an end tag
https://bugs.webkit.org/show_bug.cgi?id=249426
Summary REGRESSION(205039@main): StyledMarkupAccumulator sometimes does not emit an e...
Ryosuke Niwa
Reported 2022-12-15 13:14:17 PST
StyledMarkupAccumulator fails to emit end tags when they move out of ancestors as a result of enterNode returning false.
Attachments
Ryosuke Niwa
Comment 1 2022-12-15 14:39:17 PST
EWS
Comment 2 2022-12-15 22:12:37 PST
Committed 257977@main (24540c7a6767): <https://commits.webkit.org/257977@main> Reviewed commits have been landed. Closing PR #7721 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-12-15 22:13:20 PST
Note You need to log in before you can comment on or make changes to this bug.