Cherry-pick 257977@main (24540c7a6767). https://bugs.webkit.org/show_bug.cgi?id=249426

REGRESSION(205039@main): StyledMarkupAccumulator sometimes does not emit an end tag
    https://bugs.webkit.org/show_bug.cgi?id=249426

    Reviewed by Wenson Hsieh.

    The bug was caused by traverseNodesForSerialization failing to register ancestors that climbed out of
    when enterNode returns false. Fixed the bug by re-using the normal traversal code.

    * LayoutTests/editing/pasteboard/copy-content-with-display-none-exiting-ancestors-expected.txt: Added.
    * LayoutTests/editing/pasteboard/copy-content-with-display-none-exiting-ancestors.html: Added.
    * Source/WebCore/editing/markup.cpp:
    (WebCore::StyledMarkupAccumulator::traverseNodesForSerialization):

    Canonical link: https://commits.webkit.org/257977@main